# piscine-cybersecurity

./: Cargo.toml
arachnida/scorpion/: .gitignore  Cargo.toml
arachnida/scorpion/src/: exif.rs  file_info.rs  image.rs  main.rs  tags.rs
arachnida/scorpion/src/exif/: byte_order.rs  ifd.rs  mod.rs  parser.rs  value.rs
arachnida/spider/: Cargo.toml
arachnida/spider/src/: log.rs  main.rs  scrapper.rs
ft_onion/: Dockerfile  entrypoint.sh  index.html  nginx.conf  sshd_config  torrc
ft_otp/: Cargo.toml  ft_otp.key  key.hex
ft_otp/src/: cipher.rs  main.rs  totp.rs  tui.rs
reverse_me/level1/: bonus.md  level1_patched2  source.c
reverse_me/level2/: bonus.md  level2_patched  source.c
reverse_me/level3/: bonus.md  level3_patched  password  source.c
src/: image.rs
stockholm/: Cargo.toml  Dockerfile  Makefile  README.md
stockholm/src/: cipher.rs  log.rs  main.rs  stockholm.rs
