[package]
name = "ft_otp"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.100"
base32 = "0.5.1"
clap = { version = "4.5.56", features = ["derive"] }
crossterm = "0.29.0"
dotenv = "0.15.0"
hex = "0.4.3"
hmac = "0.12.1"
qrcode = "0.14.1"
ratatui = "0.30.0"
sha1 = "0.10.6"
sha2 = "0.10"
