[package]
name = "spider"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.43"
clap = { version = "4.5.54", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.29"
regex = "1.12.2"
reqwest = { version = "0.13.1", features = ["blocking"] }
structopt = "0.3.26"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = "2.5.8"
